src/objects/CIW__c.object
<CustomObject>
    <description>Biovision Africa Trust Community Information Worker</description>
    <fields>
        <fullName>Areas_Of_Expertise__c</fullName>
        <description>Areas of Expertise</description>
        <label>Areas Of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crop Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Health</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>Highest Education Level</description>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <description>GPS Location</description>
        <label>GPS Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joining_Year__c</fullName>
        <description>Year Started working for FCP</description>
        <label>Joining Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Locations mapped by the CIW</description>
        <label>Location Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The Person or Contact object</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>CIWs</relationshipLabel>
        <relationshipName>CIWs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Location_Name__c</fullName>
        <description>Sub Locations</description>
        <label>Sub Location Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <description>The date when the CIW filled out the CIW information survey</description>
        <label>Updated Date</label>
        <type>Date</type>
    </fields>
    <label>CIW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Person__c</columns>
        <columns>Education_Level__c</columns>
        <columns>Joining_Year__c</columns>
        <columns>Areas_Of_Expertise__c</columns>
        <columns>Location_Name__c</columns>
        <columns>Sub_Location_Name__c</columns>
        <columns>GPS_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CIW-{00000}</displayFormat>
        <label>CIW Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIWs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>